<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="55dp"
    android:background="@drawable/bg_dialog"
    android:elevation="10dp">

    <TextView
        android:id="@+id/tvPopUpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingVertical="3dp"
        android:text="@string/something_went_wrong"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPopUpDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/something_went_wrong"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopUpTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNegative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:fontFamily="@font/lato_regular"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPositive"
        app:layout_constraintEnd_toStartOf="@id/btnPositive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopUpDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPositive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/lato_regular"
        android:text="@string/btn_ok"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNegative"
        app:layout_constraintTop_toBottomOf="@id/tvPopUpDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>