<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.language.LanguageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_splash_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_12"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_12"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/choose_language_app"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnglish"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_12"
            android:background="@drawable/btn_rounded"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/english_language"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnRomanian"
            app:layout_constraintEnd_toStartOf="@id/btnRomanian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRomanian"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/bg_ripple_rounded_border_blue"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/romanian_language"
            android:textAllCaps="false"
            android:textColor="@color/blue_light"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnEnglish"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
